@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-08T08:20:00Z",
-  "count_outdated" : 502,
-  "uniques_outdated" : 291,
-  "count" : 529,
+  "timestamp" : "2022-09-08T16:22:57Z",
+  "count_outdated" : 504,
+  "uniques_outdated" : 292,
+  "count" : 530,
   "uniques" : 307,
   "clones" : [
-    {
-      "timestamp": "2022-08-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-08-26T00:00:00Z",
       "count": 3,
