@@ -1,3 +1,11 @@
+2022-09-08T16:22:57Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3016679424
+* notice: last 14d: unq all: 5 26
+* notice: prev accum: outdated-unq outdated-all / unq all: 291 502 / 307 529
+* notice: next accum: outdated-unq outdated-all / unq all: 292 504 / 307 530
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-08-25] / []
+
 2022-09-08T08:20:00Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3013541001
 * notice: last 14d: unq all: 5 27
